gcc/testsuite/algol68/compile/error-radix-6.a68
(bits d = 17r0; skip) { dg-error "invalid radix" }
